--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -3117,7 +3117,7 @@ header {
     #read-more .contact-area p {
       font-size: calc(10px + 0.3vw); }
     #read-more .contact-area i {
-      font-size: calc(10px + 3vw); } }
+      font-size: calc(18px + 2vw); } }
   #read-more .contact-area .vertical-center {
     display: flex;
     align-items: center; }
@@ -3196,6 +3196,75 @@ header {
         height: calc(12px + 3vh); }
         #read-more .intro-area .find-out-dark-2 span {
           font-size: calc(10px + 2vw); } }
+  #read-more .intro-area-2 {
+    -webkit-box-shadow: 0px 0px 11px 4px rgba(0, 0, 0, 0.42);
+    box-shadow: 0px 0px 11px 4px rgba(0, 0, 0, 0.42);
+    padding: 25px 45px; }
+    #read-more .intro-area-2 .colored-heading-dark {
+      font-family: "Bebas Neue", sans-serif;
+      color: #3E3D3D;
+      font-size: calc(16px + 1vw);
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-bottom: 0px;
+      padding-bottom: 30px; }
+      @media (max-width: 991px) {
+        #read-more .intro-area-2 .colored-heading-dark {
+          font-size: calc(24px + 1.2vw);
+          padding-bottom: 20px; } }
+    #read-more .intro-area-2 .colored-heading {
+      font-family: "Bebas Neue", sans-serif;
+      color: #003D7D;
+      font-size: calc(40px);
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-bottom: 0px;
+      padding-bottom: 40px; }
+      @media (max-width: 991px) {
+        #read-more .intro-area-2 .colored-heading {
+          font-size: calc(24px + 1.2vw);
+          padding-bottom: 10px; } }
+    #read-more .intro-area-2 p {
+      font-family: "Roboto", sans-serif;
+      color: black;
+      font-size: calc(16px);
+      padding-bottom: 10px;
+      line-height: 24px; }
+      @media (max-width: 991px) {
+        #read-more .intro-area-2 p {
+          font-size: calc(10px + 0.2vw);
+          line-height: 26px;
+          padding-bottom: 20px; } }
+    #read-more .intro-area-2 .find-out-dark-2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #003D7D;
+      width: calc(100px + 5vw);
+      height: 6vh;
+      line-height: 50px;
+      border: #003D7D 0px solid;
+      color: white;
+      position: relative;
+      font-family: "Montserrat", sans-serif;
+      cursor: pointer;
+      overflow: hidden;
+      border-radius: 5px;
+      -webkit-box-shadow: inset 0px 0px 0px 1px white;
+      -moz-box-shadow: inset 0px 0px 0px 1px white;
+      box-shadow: inset 0px 0px 0px 1px white;
+      transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4); }
+      #read-more .intro-area-2 .find-out-dark-2 span {
+        font-family: "Bebas Neue", sans-serif;
+        font-size: 22px; }
+      @media (max-width: 991px) {
+        #read-more .intro-area-2 .find-out-dark-2 {
+          width: calc(30px + 25vw);
+          height: calc(12px + 3vh); }
+          #read-more .intro-area-2 .find-out-dark-2 span {
+            font-size: calc(10px + 2vw); } }
+  #read-more .test-padding {
+    padding: 15px 30px 15px 30px; }
 
 #facts {
   background-image: url(/assets/img/gallery/truck_reduced.jpg);
@@ -3818,6 +3887,55 @@ header {
     .slider-height3 {
       min-height: 260px; } }
 
+.slider-height-4 {
+  min-height: 40vw;
+  height: 120vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover; }
+  .slider-height-4 .typebox {
+    height: 100%; }
+  .slider-height-4 .outerbox-2 {
+    position: relative;
+    top: 35%;
+    opacity: 0.9;
+    padding: 15px;
+    display: flex; }
+    .slider-height-4 .outerbox-2 h1 {
+      color: #fff;
+      font-family: "Bebas Neue", sans-serif; }
+    .slider-height-4 .outerbox-2 .innerbox {
+      padding: 15px 0px;
+      background-color: #fff;
+      border-radius: 25px; }
+      .slider-height-4 .outerbox-2 .innerbox h2 {
+        color: #14397F;
+        font-family: "Bebas Neue", sans-serif;
+        margin-right: 25px; }
+    .slider-height-4 .outerbox-2 p {
+      color: white;
+      font-family: "Roboto", sans-serif; }
+  @media (max-width: 991px) {
+    .slider-height-4 {
+      height: calc(110vh + 25px); }
+      .slider-height-4 h1 {
+        font-size: calc(12px + 4vw); }
+      .slider-height-4 h2 {
+        font-size: calc(12px + 1vw); } }
+
+.slider-height-4::before {
+  background-image: url(../img/hero/careers.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url("/assets/img/hero/careers.jpg");
+  background-blend-mode: darken;
+  content: "";
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 1; }
+
 #career-page {
   border-left: #14397F 50px solid;
   border-bottom: #14397F 50px solid;
@@ -3862,7 +3980,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #003D7D;
-    width: 100%;
+    width: 75%;
     height: 6vh;
     line-height: 50px;
     border: #003D7D 0px solid;
@@ -3881,8 +3999,12 @@ header {
       font-size: 30px; }
     @media (max-width: 991px) {
       #career-page .find-out-dark-2 {
-        width: calc(30px + 50vw);
-        height: calc(12px + 3vh); }
+        width: calc(30px + 30vw);
+        height: calc(12px + 3vh); } }
+  @media (max-width: 991px) and (max-width: 576px) {
+    #career-page .find-out-dark-2 {
+      width: 100%; } }
+    @media (max-width: 991px) {
         #career-page .find-out-dark-2 span {
           font-size: calc(12px + 2vw); } }
   #career-page .padding-bot {
@@ -4212,15 +4334,6 @@ header {
         margin-left: auto;
         margin-right: auto;
         left: 7%; } }
-  #intro-about .ten-div {
-    height: 50vh; }
-  #intro-about .five-div {
-    height: 20.6vh; }
-  #intro-about .w-bg {
-    background-color: #F8F8F8;
-    z-index: 1; }
-  #intro-about .bd-bg {
-    background-color: #080D27; }
   #intro-about .no-margin {
     margin: -1px !important; }
   #intro-about .intro-arrow {
@@ -4247,7 +4360,7 @@ header {
     background-position-y: -10vh; }
     @media (max-width: 991px) {
       #intro-about .background-image-entities {
-        height: auto; } }
+        height: calc(50px + 40vh); } }
 
 #about-more {
   background-color: #F8F8F8;
@@ -4391,6 +4504,9 @@ iframe {
   padding-left: 5px; }
   #about-us .intro-line span {
     padding-left: 10px; }
+  @media (max-width: 991px) {
+    #about-us .intro-line {
+      padding-top: 3vh; } }
 #about-us .intro-line::before {
   display: inline-block;
   position: relative;
@@ -4410,7 +4526,7 @@ iframe {
 #about-us p {
   font-family: "Source Sans Pro", sans-serif;
   color: #121111;
-  font-size: calc(10px + 0.2vw); }
+  font-size: calc(11px + 0.2vw); }
 #about-us img {
   height: 100%;
   width: 100%; }
@@ -4428,102 +4544,141 @@ iframe {
   #about-us .three-facts i {
     font-size: 5vw;
     color: #003D7D; }
+  @media (max-width: 991px) {
+    #about-us .three-facts {
+      padding-bottom: 5vh; }
+      #about-us .three-facts h1 {
+        font-size: calc(14px + 2vw); }
+      #about-us .three-facts i {
+        font-size: 10vw; } }
 
-#timeline .padding-top {
-  padding-top: 10vh; }
-#timeline .padding-bot {
-  padding-bottom: 5vh; }
-#timeline .intro h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: italic;
-  font-size: 45px; }
-#timeline .intro p {
-  color: #121111;
-  font-weight: 400;
-  font-size: calc(10px + 0.2vw);
-  font-family: "Montserrat", sans-serif;
-  text-align: left; }
-#timeline .intro .img-float-1 {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-left: auto;
-  margin-right: auto;
-  top: 5%;
-  width: calc(50px + 18vw); }
-#timeline .intro .img-float-2 {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-left: auto;
-  margin-right: auto;
-  top: 35%;
-  width: calc(59px + 25vw); }
-#timeline .intro .img-float-3 {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-left: auto;
-  margin-right: auto; }
-#timeline .mid-section h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: italic;
-  font-size: 45px; }
-#timeline .mid-section p {
-  color: 121111;
-  font-weight: 400;
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
-  text-align: left; }
-#timeline .mid-section .img-float-1 {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 40%;
-  width: 12vw; }
-#timeline .mid-section .img-float-2 {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 15%;
-  width: 20vw; }
-#timeline .mid-section .img-float-3 {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-left: auto;
-  margin-right: auto; }
-#timeline .last-section h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-style: italic;
-  font-size: 45px; }
-#timeline .last-section p {
-  color: 121111;
-  font-weight: 400;
-  font-size: 16px;
-  font-family: "Montserrat", sans-serif;
-  text-align: left; }
-#timeline .last-section .img-float-1 {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 10%;
-  width: 12vw; }
-#timeline .last-section .img-float-2 {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 10%;
-  width: 20vw; }
-#timeline .last-section .img-float-3 {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-left: auto;
-  margin-right: auto; }
+#timeline {
+  overflow-x: hidden; }
+  #timeline .padding-top {
+    padding-top: 10vh; }
+  #timeline .padding-bot {
+    padding-bottom: 5vh; }
+  #timeline .intro h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 45px; }
+  #timeline .intro p {
+    color: #121111;
+    font-weight: 400;
+    font-size: calc(10px + 0.2vw);
+    font-family: "Montserrat", sans-serif;
+    text-align: left; }
+  #timeline .intro .img-float-1 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+    top: 5%;
+    width: calc(50px + 18vw); }
+    @media (max-width: 576px) {
+      #timeline .intro .img-float-1 {
+        display: none; } }
+  #timeline .intro .img-float-2 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+    top: 35%;
+    width: calc(59px + 25vw); }
+    @media (max-width: 576px) {
+      #timeline .intro .img-float-2 {
+        display: none; } }
+  #timeline .intro .img-float-3 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%; }
+    @media (max-width: 576px) {
+      #timeline .intro .img-float-3 {
+        width: 100%; } }
+  #timeline .mid-section h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 45px; }
+  #timeline .mid-section p {
+    color: #121111;
+    font-weight: 400;
+    font-size: calc(10px + 0.2vw);
+    font-family: "Montserrat", sans-serif;
+    text-align: left; }
+  #timeline .mid-section .img-float-1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 40%;
+    width: 12vw; }
+    @media (max-width: 576px) {
+      #timeline .mid-section .img-float-1 {
+        display: none; } }
+  #timeline .mid-section .img-float-2 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 15%;
+    width: 20vw; }
+    @media (max-width: 576px) {
+      #timeline .mid-section .img-float-2 {
+        display: none; } }
+  #timeline .mid-section .img-float-3 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%; }
+    @media (max-width: 576px) {
+      #timeline .mid-section .img-float-3 {
+        width: 100%; } }
+  #timeline .last-section h1 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 45px; }
+  #timeline .last-section p {
+    color: #121111;
+    font-weight: 400;
+    font-size: calc(10px + 0.2vw);
+    font-family: "Montserrat", sans-serif;
+    text-align: left; }
+  #timeline .last-section .img-float-1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 10%;
+    width: 12vw; }
+    @media (max-width: 576px) {
+      #timeline .last-section .img-float-1 {
+        display: none; } }
+  #timeline .last-section .img-float-2 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 10%;
+    width: 20vw; }
+    @media (max-width: 576px) {
+      #timeline .last-section .img-float-2 {
+        display: none; } }
+  #timeline .last-section .img-float-3 {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%; }
+    @media (max-width: 576px) {
+      #timeline .last-section .img-float-3 {
+        width: 100%; } }
 
 .gallery-area .gallery-box .single-gallery {
   overflow: hidden;
@@ -5781,7 +5936,7 @@ footer {
     padding-bottom: 2vh; }
 
 .slider-height-dedicated-delivery {
-  background-image: url(../img/gallery/truck_reduced.jpg);
+  background-image: url(../img/services/dedicated-delivery.jpg);
   min-height: 40vw;
   height: 105vh;
   background-repeat: no-repeat;
@@ -5790,7 +5945,99 @@ footer {
   background-position: 0px -100px; }
   @media (max-width: 991px) {
     .slider-height-dedicated-delivery {
-      height: calc(40vh + 25px); } }
+      height: calc(40vh + 175px); } }
+
+.slider-height-crossdock-and-warehousing {
+  background-image: url(../img/services/crossdock.jpg);
+  min-height: 40vw;
+  height: 105vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  background-position: 0px -100px; }
+  @media (max-width: 991px) {
+    .slider-height-crossdock-and-warehousing {
+      height: calc(40vh + 175px); } }
+
+.slider-height-less-than-truckload {
+  background-image: url(../img/services/Less-than-truckload.jpg);
+  min-height: 40vw;
+  height: 105vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  background-position: 0px -100px; }
+  @media (max-width: 991px) {
+    .slider-height-less-than-truckload {
+      height: calc(40vh + 175px);
+      background-position: -10vw 0px; } }
+  @media (max-width: 991px) and (max-width: 576px) {
+    .slider-height-less-than-truckload {
+      background-position: -40vw; } }
+
+.slider-height-logistics {
+  background-image: url(../img/services/logistics.jpg);
+  min-height: 40vw;
+  height: 105vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  background-position: 0px -100px; }
+  @media (max-width: 991px) {
+    .slider-height-logistics {
+      height: calc(40vh + 175px);
+      background-position: -10vw 0px; } }
+  @media (max-width: 991px) and (max-width: 576px) {
+    .slider-height-logistics {
+      background-position: -40vw; } }
+
+.slider-height-oilfield-hauling {
+  background-image: url(../img/services/oilfield-hauling.jpg);
+  min-height: 40vw;
+  height: 105vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  background-position: 0px -100px; }
+  @media (max-width: 991px) {
+    .slider-height-oilfield-hauling {
+      height: calc(40vh + 175px);
+      background-position: -10vw 0px; } }
+  @media (max-width: 991px) and (max-width: 576px) {
+    .slider-height-oilfield-hauling {
+      background-position: -40vw; } }
+
+.slider-height-hotshot-transport {
+  background-image: url(../img/services/Hot-Shot.jpg);
+  min-height: 40vw;
+  height: 105vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  background-position: 0px -100px; }
+  @media (max-width: 991px) {
+    .slider-height-hotshot-transport {
+      height: calc(40vh + 175px);
+      background-position: -10vw 0px; } }
+  @media (max-width: 991px) and (max-width: 576px) {
+    .slider-height-hotshot-transport {
+      background-position: -40vw; } }
+
+.slider-height-hotshot-transport {
+  background-image: url(../img/services/intermodal.jpg);
+  min-height: 40vw;
+  height: 105vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  background-position: 0px -100px; }
+  @media (max-width: 991px) {
+    .slider-height-hotshot-transport {
+      height: calc(40vh + 175px);
+      background-position: -10vw 0px; } }
+  @media (max-width: 991px) and (max-width: 576px) {
+    .slider-height-hotshot-transport {
+      background-position: -40vw; } }
 
 #read-more .services-intro-area .padding-top {
   padding-top: 5vh; }
@@ -5804,7 +6051,7 @@ footer {
   padding-bottom: 5px; }
   @media (max-width: 991px) {
     #read-more .services-intro-area .colored-heading-dark {
-      font-size: calc(14px + 1vw); } }
+      font-size: calc(24px + 1vw); } }
 #read-more .services-intro-area .colored-heading {
   font-family: "Montserrat", sans-serif;
   color: #003D7D;
@@ -5825,6 +6072,8 @@ footer {
   font-family: "Montserrat", sans-serif;
   color: black;
   font-size: 16px; }
+#read-more .services-intro-area ul {
+  padding-left: 15px; }
 #read-more .services-intro-area .subtext {
   font-size: 14px;
   color: #3E3D3D; }
@@ -5891,18 +6140,15 @@ footer {
   @media (max-width: 991px) {
     #safety-read-more {
       margin-top: -10vh;
-      height: auto; } }
+      height: auto;
+      padding-top: calc(15vh + 25px); } }
+  @media (max-width: 576px) {
+    #safety-read-more {
+      margin-top: -10vh;
+      height: auto;
+      padding-top: calc(5vh + 25px); } }
   #safety-read-more .full-div {
     flex: 0; }
-  #safety-read-more .thirty-div {
-    height: 10vh; }
-    @media (max-width: 991px) {
-      #safety-read-more .thirty-div {
-        display: none; } }
-  #safety-read-more .five-div {
-    height: 10vh; }
-  #safety-read-more .t-bg {
-    background-color: transparent; }
   #safety-read-more .box-shadow-pop {
     -webkit-box-shadow: 5px 4px 6px 2px rgba(0, 0, 0, 0.51);
     box-shadow: 5px 4px 6px 2px rgba(0, 0, 0, 0.51);
@@ -6356,7 +6602,12 @@ footer {
       font-size: 75px; }
     @media (max-width: 991px) {
       #safety-intro-picture .slider-height-safety {
-        height: calc(40vh + 25px); } }
+        height: calc(35vh + 250px); } }
+    @media (max-width: 576px) {
+      #safety-intro-picture .slider-height-safety {
+        height: calc(40vh + 150px); }
+        #safety-intro-picture .slider-height-safety h1 {
+          font-size: 45px; } }
     #safety-intro-picture .slider-height-safety img {
       width: 100%;
       object-fit: cover; }
